# gamers-central

./: docker-compose.yml  package.json
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
frontend/pages/: index.vue
frontend/styles/: settings.scss
pages/: about.vue  index.vue
styles/: settings.scss
