[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sean Harris <sean.harris@monocrea.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
